# MetaSystem

./: CMakeLists.txt  ThoughtProcess.txt
MetaSystem/: AnyType.cpp  AnyType.h  CMakeLists.txt  MetaInfo.cpp  MetaInfo.h
MetaSystem_ut/: CMakeLists.txt  main.cpp
